Resolve conflicts and simplify code
Signed-off-by: Ivan Kavaldzhiev <ivankavaldzhiev@gmail.com>